--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Add specs for, well, everything
 * Show the Authors and/or Project URLs for GitHub bundles
 * Make the SOURCE param on install an option
 * Add an option to remove all other versions of the same bundle on install
